testsuite/negative/notifypropertychanged.n
// MACRO: Nemerle.WPF.dll
using Nemerle.WPF;

[NotifyPropertyChanged] // E: Duplicates of 'NotifyPropertyChanged' macroattribute are not allowed.
[NotifyPropertyChanged]
class A {}

[NotifyPropertyChanged("Method")] // E: Specify a valid method for property changed event raising
class A1 {}

[NotifyPropertyChanged]
public class A2
{
    [NotifyChangedOptions(HideSelfChanges)] // W: NotifyChangedOptions macro ignored on property without a setter.
    public Prop       : int { get; }

    [NotifyChangedOptions(Dependent = [Prop3, Prop], HideSelfChanges)] // E: Class 'A2' does not contain a property with the name 'Prop3'.
    public Prop2 : string { get; set; }
    
    [NotifyChangedOptions(Dependent = ["Prop3 + 7"], HideSelfChanges)] // E: Expected simple name
    public Prop4 : string { get; set; }
    
    public CustomNotify() : void
    {
        RaisePropertyChanged("test"+7);    // E: Specify a property for changed event raising
        RaisePropertyChanged(Prop5);       // E: Class 'A2' does not contain a property with the name 'Prop5'.
        RaisePropertyChanged(Prop, Raise); // E: Specify a valid method for property changed event raising
    }
}